--- a/app/src/main/res/layout/activity_crea.xml
+++ b/app/src/main/res/layout/activity_crea.xml
@@ -18,6 +18,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/httpProve"
+        android:layout_width="214dp"
+        android:layout_height="195dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/textview_border"
+        android:hint="@string/proveURL"
+        android:inputType="textMultiLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/create" />
+
+    <TextView
+        android:id="@+id/httpResp"
+        android:layout_width="224dp"
+        android:layout_height="230dp"
+        android:background="@drawable/textview_border"
+        android:hint="@string/httpResponse"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCreate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/httpProve"
+        app:layout_constraintVertical_bias="0.545" />
+
     <Button
         android:id="@+id/buttonCreate"
         android:layout_width="193dp"
