--- a/app/src/main/res/layout/activity_mood.xml
+++ b/app/src/main/res/layout/activity_mood.xml
@@ -65,18 +65,18 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbardescubre" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/mood_description"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:elevation="7dp"
         android:fontFamily="@font/ml"
         android:lineSpacingExtra="6dp"
         android:text="@string/mood_description"
         android:textAlignment="center"
-        android:textColor="#3c000000"
+        android:textColor="@color/colorBlack"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -94,7 +94,7 @@
         android:elevation="7dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/mood_description" />
 
     <Button
         android:id="@+id/btnblue"
@@ -142,12 +142,10 @@
         android:background="@drawable/bgwhite"
         android:elevation="7dp"
         android:fontFamily="@font/mm"
-        android:text="@string/save"
-        android:textAllCaps="false"
+        android:text="@string/next"
         android:textColor="#1abc9c"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
