--- a/app/src/main/res/layout/activity_mood_monster.xml
+++ b/app/src/main/res/layout/activity_mood_monster.xml
@@ -56,11 +56,12 @@
         android:id="@+id/btncontinue"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="72dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="40dp"
         android:elevation="7dp"
         android:fontFamily="@font/mm"
+        android:background="@drawable/bgwhite"
         android:text="SEGÜENT"
         android:textAllCaps="false"
         android:textColor="#fff"
