--- a/app/src/main/res/layout/activity_concentra.xml
+++ b/app/src/main/res/layout/activity_concentra.xml
@@ -4,7 +4,131 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Concentra">
+    tools:context=".ui.Concentra_activity.Concentra">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbardescubre"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/colorSecundary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        android:fontFamily="@font/mm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_baseline_drag_handle_24" />
+
+    <TextView
+        android:id="@+id/concentrate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/mm"
+        android:text="CONCENTRA'T"
+        android:textAlignment="center"
+        android:textColor="#779BBC"
+        android:textColorHint="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbardescubre" />
+
+    <TextView
+        android:id="@+id/concentrate_instructions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:fontFamily="@font/ml"
+        android:text="@string/concentrate_instructions"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/concentrate" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/clockCreate"
+        android:layout_width="108dp"
+        android:layout_height="119dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/redbutton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/concentrate_instructions" />
+
+    <EditText
+        android:id="@+id/emotionWord"
+        android:layout_width="350dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:hint="@string/textHint"
+        android:fontFamily="@font/mm"
+        android:inputType="textCapSentences|textAutoCorrect"
+        android:textSize="18sp"
+        android:gravity="center_vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/clockCreate" />
+
+    <Button
+        android:id="@+id/createWordCloud"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:backgroundTint="#779BBC"
+        android:fontFamily="@font/mm"
+        android:text="@string/getWorldCloud"
+        android:textColor="#FFF"
+        android:textSize="24sp"
+        android:background="@drawable/bgwhite"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/wordcloud"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/mm"
+        android:text="WORDCLOUD"
+        android:textAlignment="center"
+        android:textColor="#779BBC"
+        android:textColorHint="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/toolbardescubre" />
+
+    <TextView
+        android:id="@+id/wordcloud_explanation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/ml"
+        android:text="@string/wordcloud_instructions"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/wordcloud" />
+
+    <ImageView
+        android:id="@+id/resultWC"
+        android:layout_width="match_parent"
+        android:background="@drawable/textview_border"
+        android:layout_height="300dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wordcloud_explanation"
+        android:visibility="gone"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <Button
         android:id="@+id/buttonConcentra"
@@ -16,136 +140,11 @@
         android:text="@string/next"
         android:textColor="#FFF"
         android:textSize="24sp"
+        android:background="@drawable/bgwhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName5"
-        android:layout_width="372dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="24dp"
-        android:ems="10"
-        android:hint="@string/textHint"
-        android:fontFamily="@font/mm"
-        android:inputType=
-            "textCapSentences|textAutoCorrect"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName4"
-        android:layout_width="372dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="24dp"
-        android:ems="10"
-        android:hint="@string/textHint"
-        android:fontFamily="@font/mm"
-        android:inputType=
-            "textCapSentences|textAutoCorrect"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
-
-    <TextView
-        android:id="@+id/concentrate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:fontFamily="@font/mm"
-        android:text="CONCENTRA'T"
-        android:textAlignment="center"
-        android:textColor="#779BBC"
-        android:textColorHint="#FFFFFF"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbardescubre" />
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbardescubre"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="#779BBC"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        android:fontFamily="@font/mm"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_baseline_drag_handle_24" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="372dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="24dp"
-        android:ems="10"
-        android:hint="@string/textHint"
-        android:fontFamily="@font/mm"
-        android:inputType=
-            "textCapSentences|textAutoCorrect"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/instructions" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="372dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="24dp"
-        android:ems="10"
-        android:hint="@string/textHint"
-        android:fontFamily="@font/mm"
-        android:inputType=
-            "textCapSentences|textAutoCorrect"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName3"
-        android:layout_width="372dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="24dp"
-        android:ems="10"
-        android:hint="@string/textHint"
-        android:fontFamily="@font/mm"
-        android:inputType=
-            "textCapSentences|textAutoCorrect"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
-
-    <TextView
-        android:id="@+id/instructions"
-        android:layout_width="330dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="40dp"
-        android:text="@string/concentrate_instructions"
-        android:textSize="14sp"
-        android:fontFamily="@font/ml"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/concentrate" />
+        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
