--- a/app/src/main/res/layout/activity_descubre.xml
+++ b/app/src/main/res/layout/activity_descubre.xml
@@ -16,6 +16,7 @@
         android:text="@string/next"
         android:textColor="#FFF"
         android:textSize="24sp"
+        android:background="@drawable/bgwhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +50,7 @@
         app:srcCompat="@drawable/maptest" />
 
     <TextView
-        android:id="@+id/dicover"
+        android:id="@+id/discover"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -71,7 +72,7 @@
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dicover" />
+        app:layout_constraintTop_toBottomOf="@+id/discover" />
 
     <fragment
         android:id="@+id/fragment"
