--- a/app/src/main/res/layout/activity_escribe.xml
+++ b/app/src/main/res/layout/activity_escribe.xml
@@ -6,27 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.Escribe">
 
-    <Button
-        android:id="@+id/buttonEscriu"
-        android:layout_width="193dp"
-        android:layout_height="66dp"
-        android:layout_marginBottom="40dp"
-        android:backgroundTint="#779BBC"
-        android:fontFamily="@font/mm"
-        android:text="@string/next"
-        android:textColor="#FFF"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
-        app:layout_constraintVertical_bias="1.0" />
-
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarEscriu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#779BBC"
+        android:background="@color/colorSecundary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         android:fontFamily="@font/mm"
@@ -37,7 +21,7 @@
         app:navigationIcon="@drawable/ic_baseline_drag_handle_24" />
 
     <TextView
-        android:id="@+id/write"
+        android:id="@+id/disconnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -51,31 +35,54 @@
 
     <TextView
         android:id="@+id/writeDescription"
-        android:layout_width="371dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:fontFamily="@font/ml"
         android:text="@string/write_description"
+        android:textSize="18sp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/write" />
+        app:layout_constraintTop_toBottomOf="@+id/disconnect" />
 
     <EditText
         android:id="@+id/writeUser"
-        android:layout_width="324dp"
-        android:layout_height="373dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/textview_border"
         android:fontFamily="@font/mm"
-        android:hint="Escriu aqui ..."
+        android:gravity="top|left"
+        android:hint="@string/textHint"
         android:inputType="textMultiLine"
+        android:minHeight="300dp"
         android:padding="10dp"
+        android:textSize="18sp"
         android:verticalScrollbarPosition="right"
+        android:scrollbars="vertical"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/writeDescription" />
+
+    <Button
+        android:id="@+id/buttonEscriu"
+        android:layout_width="193dp"
+        android:layout_height="66dp"
+        android:layout_marginBottom="40dp"
+        android:backgroundTint="@color/colorSecundary"
+        android:fontFamily="@font/mm"
+        android:text="@string/next"
+        android:textColor="#FFF"
+        android:textSize="24sp"
+        android:background="@drawable/bgwhite"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
