--- a/app/src/main/res/layout/activity_respiracio.xml
+++ b/app/src/main/res/layout/activity_respiracio.xml
@@ -4,72 +4,76 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Crea_activity.Crea">
+    android:visibility="visible"
+    app:layoutDescription="@xml/activity_inspira_scene"
+    tools:context=".ui.Desconnecta_activity.Desconecta">
 
     <TextView
-        android:id="@+id/draw"
+        android:id="@+id/breath"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:text="@string/create"
-        android:textColor="@color/colorSecundary"
-        android:textSize="30sp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/mm"
+        android:text="@string/squareBreathe"
+        android:textColor="#779BBC"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbarBreath" />
 
-    <TextView
-        android:id="@+id/discoverDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/squareBreath"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
+        android:src="@drawable/squarebreath"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/breath" />
+
+    <TextView
+        android:id="@+id/writeDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:fontFamily="@font/ml"
-        android:text="@string/create_description"
+        android:text="@string/squareBreath_description"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/draw" />
-
-    <ImageView
-        android:id="@+id/puzzle"
-        android:layout_width="match_parent"
-        android:layout_height="320dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/discoverDescription"
-        app:srcCompat="@drawable/puzzleicon" />
+        app:layout_constraintTop_toBottomOf="@+id/squareBreath" />
 
     <Button
-        android:id="@+id/buttonCrea"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/buttonRespira"
+        android:layout_width="193dp"
+        android:layout_height="66dp"
         android:layout_marginBottom="40dp"
-        android:background="@drawable/bgwhite"
-        android:backgroundTint="@color/colorSecundary"
+        android:backgroundTint="#779BBC"
         android:fontFamily="@font/mm"
         android:text="@string/next"
         android:textColor="#FFF"
         android:textSize="24sp"
+        android:background="@drawable/bgwhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarcreate"
+        android:id="@+id/toolbarBreath"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
+        android:backgroundTint="#779BBC"
         android:minHeight="?attr/actionBarSize"
-        android:backgroundTint="@color/colorSecundary"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_baseline_drag_handle_24" />
