--- a/app/src/main/res/layout/activity_escribe.xml
+++ b/app/src/main/res/layout/activity_escribe.xml
@@ -60,20 +60,18 @@
         android:gravity="top|left"
         android:hint="@string/textHint"
         android:inputType="textMultiLine"
-        android:minHeight="300dp"
+        android:minHeight="150dp"
+        android:maxHeight="300dp"
         android:padding="10dp"
         android:textSize="18sp"
-        android:verticalScrollbarPosition="right"
-        android:scrollbars="vertical"
-        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/writeDescription" />
 
     <Button
         android:id="@+id/buttonEscriu"
-        android:layout_width="193dp"
-        android:layout_height="66dp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
         android:backgroundTint="@color/colorSecundary"
         android:fontFamily="@font/mm"
