--- a/app/src/main/res/layout/activity_avalua.xml
+++ b/app/src/main/res/layout/activity_avalua.xml
@@ -41,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:fontFamily="@font/mm"
         android:text="@string/draw"
         android:textColor="#779BBC"
         android:textSize="30sp"
