--- a/app/src/main/res/layout/activity_concentra.xml
+++ b/app/src/main/res/layout/activity_concentra.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/concentrate_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.Concentra_activity.Concentra">
@@ -51,8 +52,8 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/clockCreate"
-        android:layout_width="108dp"
-        android:layout_height="119dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/redbutton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +123,8 @@
         android:id="@+id/resultWC"
         android:layout_width="match_parent"
         android:background="@drawable/textview_border"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
+        android:minHeight="200dp"
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
