--- a/app/src/main/res/layout/activity_dibuja.xml
+++ b/app/src/main/res/layout/activity_dibuja.xml
@@ -65,16 +65,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/draw" />
 
-    <ImageView
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/openCamera"
         android:layout_width="match_parent"
         android:layout_height="350dp"
-        android:layout_marginStart="106dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="107dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/discoverDescription"
-        app:srcCompat="@drawable/draw_cam" />
+        app:srcCompat="@raw/camera" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
