--- a/app/src/main/res/layout/activity_mood.xml
+++ b/app/src/main/res/layout/activity_mood.xml
@@ -56,7 +56,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
         android:elevation="7dp"
-        android:fontFamily="@font/mr"
+        android:fontFamily="@font/mm"
         android:text="@string/mood"
         android:textColor="#FFF"
         android:textSize="28sp"
