--- a/app/src/main/res/layout/activity_respiracio_accio.xml
+++ b/app/src/main/res/layout/activity_respiracio_accio.xml
@@ -72,9 +72,8 @@
         android:layout_height="300dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/respiraAccioDescription"
-        app:srcCompat="@drawable/comencabutton" />
+        app:srcCompat="@drawable/breathimage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
